--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,7 @@ body::before {
   background-size: cover;
   left: 0;
   right: 0;
-  top: 0;
-  height: 100vh;
+  top: 0;;
   z-index: -1;
 }
 
@@ -60,7 +59,6 @@ h6 {
 #header {
   transition: ease-in-out 0.3s;
   position: relative;
-  height: 100vh;
   display: flex;
   align-items: center;
   z-index: 997;
@@ -793,12 +791,12 @@ section .container {
 --------------------------------------------------------------*/
 
 #services {
-  max-height: 100vh; /* Membatasi tinggi hingga layar penuh */
+  
   overflow-y: auto; /* Memastikan konten dapat di-scroll */
 }
 
 .services .scrollable-content {
-  max-height: 100%;
+  
   overflow-y: auto;
 }
 
