added details of pixshoot portfolio section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,6 +412,12 @@ section .container {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
